# qcc-toolkit

./: .gitignore  AGENTS.md  CONSTITUTION.md  README.md  VISION.md  pyproject.toml
docs/: methods-key-content.md  plan.md  project-map.md  qcc-project-story.md  workflows.md
method-kits/: README.md  check-sheet.md  fishbone-diagram.md  five-w-two-h.md  five-whys.md  flowchart.md  histogram.md  pareto-chart.md  scatter-diagram.md
qcc_toolkit/: __init__.py  _version.py  analysis.py  charts.py  contracts.py  evidence.py  fishbone.py  interpretation.py  methods.py  reports.py  stages.py
specs/: expand-core-qcc-method-kits.md  expand-core-qcc-method-kits.test.md  expand-seven-basic-quality-tools-guidance.md  expand-seven-basic-quality-tools-guidance.test.md  markdown-first-method-guidance.md  markdown-first-method-guidance.test.md  qcc-method-kits.md  qcc-method-kits.test.md  qcc-method-selection-summary.md  qcc-method-selection-summary.test.md  qcc-toolkit-first-slice.md  qcc-toolkit-first-slice.test.md
tests/: test_acceptance.py  test_artifact_consistency.py  test_chart_rendering.py  test_chart_spec.py  test_evidence_package.py  test_example_project_e2e.py  test_example_project_structure.py  test_first_slice_integration.py  test_fishbone_generation.py  test_generate_fishbone_script.py  test_generate_pareto_script.py  test_import.py  test_interpretation.py  test_markdown_first_method_guidance.py  test_method_guides.py  test_method_kit_closeout.py  test_method_registry.py  test_pareto_calculation.py  test_pareto_validation.py  test_registry.py  test_reports.py  (+7 more)
(+222 files in other folders)
